--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <div class="card">
     <img src="https://i.pinimg.com/736x/7c/d2/dd/7cd2dd43969c30cd2e9c3c81855e6a5e.jpg" alt="Profil Fotoğrafı" class="avatar">
-    <div class="username">bertuğ</div>
+    <div class="username">𝕭𝖊𝖗𝖙𝖚𝖌</div>
     <div class="tagline">internetin loş tarafı</div>
 
     <div class="icons">
