--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>𝕭𝖊𝖗𝖙𝖚𝖌</title>
+  <title>𝕭𝖊𝖗𝖙𝖚𝖌𓃶</title>
   <style>
     body {
       margin: 0;
