--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
     .icons a:hover img {
       transform: scale(1.1);
     }
+
+    /* GÖRÜNMEYEN BUTON */
+    .hidden-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 50px;
+      height: 50px;
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+      opacity: 0;
+      z-index: 100;
+    }
   </style>
 </head>
 <body>
@@ -74,7 +88,7 @@
 
     <div class="icons">
       <a href="https://www.snapchat.com/add/brtg1905416?share_id=P_WMcq-bDis&locale=tr-TR" target="_blank">
-        <img src="https://images.icon-icons.com/2428/PNG/512/snapchat_black_logo_icon_147080.png" alt="YouTube">
+        <img src="https://images.icon-icons.com/2428/PNG/512/snapchat_black_logo_icon_147080.png" alt="Snapchat">
       </a>
       <a href="https://instagram.com/bertugefecelikk" target="_blank">
         <img src="https://images.icon-icons.com/2428/PNG/512/instagram_black_logo_icon_147122.png" alt="Instagram">
@@ -83,10 +97,13 @@
         <img src="https://images.icon-icons.com/2428/PNG/512/steam_black_logo_icon_147078.png" alt="Steam">
       </a>
       <a href="https://open.spotify.com/user/6ikiauf9pmnsanrhsjzsrobzu?si=29a944c3959d4be8" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/174/174872.png" alt="Soundcloud">
+        <img src="https://cdn-icons-png.flaticon.com/512/174/174872.png" alt="Spotify">
       </a>
     </div>
   </div>
+
+  <!-- GÖRÜNMEYEN SAĞ ALTA BUTON -->
+  <a href="karanlik.html" class="hidden-button" title="Gizli geçit"></a>
 
 </body>
 </html>
