--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>𝕭𝖊𝖗𝖙𝖚𝖌𓃶</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       padding: 0;
@@ -12,7 +17,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
       color: white;
     }
 
@@ -21,7 +26,8 @@
       padding: 40px 20px;
       border-radius: 20px;
       text-align: center;
-      width: 320px;
+      width: 90%;
+      max-width: 320px;
     }
 
     .avatar {
@@ -51,6 +57,7 @@
       justify-content: center;
       gap: 15px;
       margin-top: 15px;
+      flex-wrap: wrap;
     }
 
     .icons a img {
@@ -76,6 +83,52 @@
       cursor: pointer;
       opacity: 0;
       z-index: 100;
+    }
+
+    /* Responsive: Daha büyük ekranlar */
+    @media (min-width: 768px) {
+      .card {
+        width: 350px;
+        padding: 50px 30px;
+      }
+
+      .avatar {
+        width: 140px;
+        height: 140px;
+      }
+
+      .username {
+        font-size: 28px;
+      }
+
+      .tagline {
+        font-size: 18px;
+      }
+    }
+
+    /* Responsive: Küçük ekranlar (telefon) */
+    @media (max-width: 480px) {
+      .card {
+        padding: 30px 15px;
+      }
+
+      .avatar {
+        width: 100px;
+        height: 100px;
+      }
+
+      .username {
+        font-size: 22px;
+      }
+
+      .tagline {
+        font-size: 14px;
+      }
+
+      .icons a img {
+        width: 28px;
+        height: 28px;
+      }
     }
   </style>
 </head>
