--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #0d0d0d;
+      background-color: #3d000;
       font-family: 'Arial', sans-serif;
       display: flex;
       justify-content: center;
