--- a/karanlik.html
+++ b/karanlik.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #0a0a0a;
+      background-color: #3a0000;
       color: #ccc;
       font-family: 'Courier New', monospace;
       background-image: url('https://c.tenor.com/0EHIKUJy9_cAAAAd/tenor.gif');
